--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <div>
         <h1>Redirecting To Offer App</h1>
-        <span>[Created By Mostafa 😊]</span>
+        <span>[Created 😊]</span>
       </div>
 </body>
 </html>
